Fix exposed filter alignment

--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -746,7 +746,7 @@ nav.tabs {
 
 /********************* VIEWS *********************/
 .views-exposed-form {
-  .form-item {
+  .form--inline > .form-item {
     float: none;
     display: inline-block;
   }
